--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,70 @@
 site_name: Basic | Deta
 site_description: Deta Docs For Noobs
+
 theme:
-  name: material
+  name : material
+  custom_dir: overrides
+  logo: images/ship_purple.png
+  palette:
+    # Palette toggle for light mode
+    - scheme: default
+      primary: blue grey
+      accent: light blue
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      primary: blue grey
+      accent: light blue
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+
+  features:
+    - navigation.instant
+    - navigation.tracking
+    - navigation.expand
+    - navigation.top
+    - search.suggest
+    - search.highlight
+    - search.share
+
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - attr_list
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+
+plugins:
+  - search
+
+extra:
+  homepage: https://basic.deta.dev
+  generator: false
+
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/AyushSehrawat/basic-deta
+      name: Basic Deta Repository
+
+    - icon: fontawesome/brands/discord
+      link: https://discord.com/invite/K3gYNqHXUU
+      name: Deta Discord Server
+
+extra_javascript:
+  - javascripts/shortcuts.js
+
+repo_url: https://github.com/AyushSehrawat/basic-deta
+repo_name: Basic Deta
+copyright: Copyright &copy; 2022 - 2022 Mini x Deta
+
+nav:
+  - Basic Deta: index.md
+  - Templates:
+      - Sample: codes\sample.md
