--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Basic | Deta
+site_name: Basic Deta
 site_description: Deta Docs For Noobs
 
 theme:
@@ -40,6 +40,10 @@ markdown_extensions:
       anchor_linenums: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - tables
 
 plugins:
   - search
@@ -65,6 +69,7 @@ repo_name: Basic Deta
 copyright: Copyright &copy; 2022 - 2022 Mini x Deta
 
 nav:
-  - Basic Deta: index.md
-  - Templates:
-      - Sample: codes\sample.md
+  - Homepage: index.md
+  - Common FAQs: faq.md
+  - Codes:
+      - simple-fastapi-hello-world: codes\simple-fastapi-hello-world.md
