--- a/.github/workflows/deta.yml
+++ b/.github/workflows/deta.yml
@@ -3,6 +3,7 @@ on: push
 
 jobs:
   deploy:
+    if: "contains(github.event.head_commit.message, 'deploy')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
