--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,4 +72,4 @@ nav:
   - Homepage: index.md
   - Common FAQs: faq.md
   - Codes:
-      - simple-fastapi-hello-world: codes\simple-fastapi-hello-world.md
+      - simple-fastapi-hello-world: codes/simple-fastapi-hello-world.md
