--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,8 @@
 site_name: Basic Deta
 site_description: Deta Docs For Noobs
+repo_url: https://github.com/AyushSehrawat/basic-deta
+repo_name: Basic Deta
+copyright: Copyright &copy; 2022 - 2022 Mini x Deta
 
 theme:
   name : material
@@ -8,16 +11,16 @@ theme:
   palette:
     # Palette toggle for dark mode
     - scheme: slate
-      primary: blue grey
-      accent: light blue
+      primary: purple
+      accent: pink
       toggle:
         icon: material/lightbulb-outline
         name: Switch to light mode
 
     # Palette toggle for light mode
     - scheme: default
-      primary: blue grey
-      accent: light blue
+      primary: purple
+      accent: pink
       toggle:
         icon: material/lightbulb
         name: Switch to dark mode
@@ -64,13 +67,10 @@ extra:
 extra_javascript:
   - javascripts/shortcuts.js
 
-repo_url: https://github.com/AyushSehrawat/basic-deta
-repo_name: Basic Deta
-copyright: Copyright &copy; 2022 - 2022 Mini x Deta
-
 nav:
-  - Homepage: index.md
+  - Home: index.md
   - Getting Started: getting-started.md
+  - Help: help.md
   - Common FAQs: faq.md
   - Codes:
       - simple-fastapi-hello-world: codes/simple-fastapi-hello-world.md
