--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -12,7 +12,7 @@ theme:
     # Palette toggle for dark mode
     - scheme: slate
       primary: purple
-      accent: pink
+      accent: purple
       toggle:
         icon: material/lightbulb-outline
         name: Switch to light mode
@@ -20,7 +20,7 @@ theme:
     # Palette toggle for light mode
     - scheme: default
       primary: purple
-      accent: pink
+      accent: purple
       toggle:
         icon: material/lightbulb
         name: Switch to dark mode
@@ -30,10 +30,10 @@ theme:
     - navigation.tracking
     - navigation.expand
     - navigation.top
+    - navigation.indexes
     - search.suggest
     - search.highlight
     - search.share
-    - navigation.indexes
     - toc.follow
 
 markdown_extensions:
@@ -76,6 +76,11 @@ nav:
   - Home: index.md
   - Getting Started: getting-started.md
   - Help: help.md
-  - Common FAQs: faq.md
+  - Frequently Asked Questions:
+      - faq/index.md
+      - Micros: faq/micros.md
+      - Base: faq/base.md
+      - Drive: faq/drive.md
+      - CLI: faq/cli.md
   - Codes:
       - simple-fastapi-hello-world: codes/simple-fastapi-hello-world.md
