--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -7,11 +7,12 @@ copyright: Copyright &copy; 2022 - 2022 Mini x Deta
 theme:
   name : material
   custom_dir: overrides
-  logo: images/ship_purple.png
+  favicon: images/deta_logo.svg
+  logo: images/deta_logo.svg
   palette:
     # Palette toggle for dark mode
     - scheme: slate
-      primary: purple
+      primary: blue grey
       accent: purple
       toggle:
         icon: material/lightbulb-outline
@@ -19,7 +20,7 @@ theme:
 
     # Palette toggle for light mode
     - scheme: default
-      primary: purple
+      primary: blue grey
       accent: purple
       toggle:
         icon: material/lightbulb
@@ -37,50 +38,75 @@ theme:
     - toc.follow
 
 markdown_extensions:
+  - abbr
   - admonition
-  - pymdownx.details
-  - pymdownx.superfences
   - attr_list
-  - pymdownx.highlight:
-      anchor_linenums: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
+  - def_list
+  - md_in_html
+  - meta
+  - pymdownx.details
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.highlight:
+      linenums: true
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink:
+      repo_url_shortener: true
+      repo_url_shorthand: true
+      user: Duplexes
+      repo: pyco
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
   - tables
   - toc:
-        permalink: true
+      permalink: true
 
 plugins:
   - search
   - tags
+  - git-revision-date-localized:
+      enable_creation_date: true
 
 extra:
   homepage: https://basic.deta.dev
   generator: false
 
   social:
-    - icon: fontawesome/brands/github
+    - icon: simple/github
       link: https://github.com/AyushSehrawat/basic-deta
       name: Basic Deta Repository
 
-    - icon: fontawesome/brands/discord
+    - icon: simple/discord
       link: https://discord.com/invite/K3gYNqHXUU
       name: Deta Discord Server
+
+    - icon: material/web
+      link: https://www.deta.sh/
+      name: Deta Website
 
 extra_javascript:
   - javascripts/shortcuts.js
 
 nav:
   - Home: index.md
-  - Getting Started: getting-started.md
+  - Getting Started:
+    - getting-started/index.md
+    - Micros: getting-started/micros.md
+    - Base: getting-started/base.md
+    - Drive: getting-started/drive.md
+    - Projects: getting-started/projects.md
   - Help: help.md
   - Frequently Asked Questions:
-      - faq/index.md
       - Micros: faq/micros.md
       - Base: faq/base.md
       - Drive: faq/drive.md
       - CLI: faq/cli.md
-  - Codes:
-      - simple-fastapi-hello-world: codes/simple-fastapi-hello-world.md
+  - Examples:
+      - FastAPI App: examples/fastapi-app.md
+      - FastAPI Drive CDN: examples/fastapi-drive-cdn.md
