--- a/.github/workflows/deta-deploy.yml
+++ b/.github/workflows/deta-deploy.yml
@@ -1,21 +1,30 @@
-name: Deploy to Deta
-on: push
+name: Build and deploy site to Deta
+on:
+  - push
+  - workflow_dispatch
 
 jobs:
   deploy:
     if: "contains(github.event.head_commit.message, 'deploy')"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python environment
+        uses: actions/setup-python@v2
         with:
           python-version: 3.9
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+
       - name: Build site
         run: mkdocs build --clean
+
       - name: Deploy to Deta
         uses: BogDAAAMN/deta-deploy-action@v1.0.1
         with:
@@ -23,4 +32,3 @@ jobs:
           deta-name: 'basic-deta'
           deta-project: 'fastapi'
           deta-project-dir: '.'
-
