Add general.md to nav

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -105,10 +105,10 @@ nav:
   - Home: index.md
   - Getting Started:
       - getting-started/index.md
+      - General: getting-started/general.md
       - Micros: getting-started/micros.md
       - Base: getting-started/base.md
       - Drive: getting-started/drive.md
-      - Projects: getting-started/projects.md
   - Help: help.md
   - Frequently Asked Questions:
       - faq/index.md
