--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -55,6 +55,7 @@ markdown_extensions:
   - pymdownx.highlight:
       linenums: true
       anchor_linenums: true
+      auto_title: true
   - pymdownx.inlinehilite
   - pymdownx.magiclink:
       repo_url_shortener: true
