--- a/.github/workflows/deta-deploy.yml
+++ b/.github/workflows/deta-deploy.yml
@@ -27,6 +27,9 @@ jobs:
 
       - name: Build featured.md
         run: |
+          [ -f feature.json ] || echo "json file not found!"
+          [ -f feature.py ] || echo "py file not found!"
+          [ -f docs/featured.md ] || echo "md file not found!"
           python feature.py
 
       - name: Deploy to Deta
