--- a/.github/workflows/deta-deploy.yml
+++ b/.github/workflows/deta-deploy.yml
@@ -19,11 +19,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Build featured.md
-        run: python feature.py
+        run: python3 feature.py
         
       - name: Build site
         run: mkdocs build --clean
