--- a/.github/workflows/deta-deploy.yml
+++ b/.github/workflows/deta-deploy.yml
@@ -15,11 +15,10 @@ jobs:
       - name: Set up Python environment
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: 3.8
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip3 install -r requirements.txt
 
       - name: Build featured.md
         run: python3 feature.py
