--- a/.github/workflows/deta-deploy.yml
+++ b/.github/workflows/deta-deploy.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: 3.8
 
       - name: Install dependencies
-        run: pip3 install -r requirements.txt && ls
+        run: pip install -r requirements.txt && ls
 
       - name: Build featured.md
         run: python3 feature.py && ls
