--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -12,22 +12,7 @@ theme:
   favicon: images/deta_logo.svg
   logo: images/deta_logo.svg
   palette:
-    # Palette toggle for dark mode
-    - scheme: slate
-      primary: blue grey
-      accent: purple
-      toggle:
-        icon: material/lightbulb-outline
-        name: Switch to light mode
-
-    # Palette toggle for light mode
-    - scheme: default
-      primary: blue grey
-      accent: purple
-      toggle:
-        icon: material/lightbulb
-        name: Switch to dark mode
-
+    scheme: deta
   features:
     - announce.dismiss
     - header.autohide
@@ -53,7 +38,7 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.highlight:
-      linenums: true
+      linenums: false
       anchor_linenums: true
       auto_title: true
   - pymdownx.inlinehilite
@@ -102,6 +87,9 @@ extra:
 extra_javascript:
   - javascripts/shortcuts.js
 
+extra_css:
+  - stylesheets/extra.css
+
 nav:
   - Home: index.md
   - Tutorials:
@@ -117,7 +105,3 @@ nav:
       - Base: faq/base.md
       - Drive: faq/drive.md
       - CLI: faq/cli.md
-  - Examples:
-      - examples/index.md
-      - FastAPI App: examples/fastapi-app.md
-      - FastAPI Drive CDN: examples/fastapi-drive-cdn.md
